Fix name in Bower and Package.json

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ClassNameMixin",
+  "name": "class-name-mixin",
   "homepage": "https://github.com/deseretdigital-ui/ClassNameMixin",
   "authors": [
     "Russell Ahlstrom <rahlstrom@deseretdigital.com"
