--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/deseretdigial-ui/ClassNameMixin.git"
+    "url": "https://github.com/deseretdigital-ui/class-name-mixin.git"
   },
   "author": "Russell Ahlstrom <rahlstrom@deseretdigital.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/deseretdigital-ui/ClassNameMixin/issues"
+    "url": "https://github.com/deseretdigital-ui/class-name-mixin/issues"
   },
-  "homepage": "https://github.com/deseretdigital-ui/ClassNameMixin",
+  "homepage": "https://github.com/deseretdigital-ui/class-name-mixin",
   "devDependencies": {
+    "classnames": "^2.1.2",
     "gulp": "^3.8.10",
     "gulp-gh-pages": "^0.4.0",
     "gulp-mocha": "^2.0.0",
